add 2 profiles for specific jdk problems