@@ -89,6 +89,15 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.20.1</version>
+                <configuration>
+                    <argLine>${add.opens}</argLine>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.6.1</version>
                 <configuration>
@@ -139,6 +148,9 @@
                         <goals>
                             <goal>jar</goal>
                         </goals>
+                        <configuration>
+                            <additionalparam>${javadoc.none}</additionalparam>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -167,6 +179,26 @@
     </build>
 
     <profiles>
+        <profile>
+            <id>java9</id>
+            <activation>
+                <jdk>[9,)</jdk>
+            </activation>
+            <properties>
+                <!-- we need to open a specific package of a platform module to the unnamed module that uses deep reflection at runtime,
+                     currently this is allowed but deep reflection in the unnamed module will not be validated in a future release of JDK at runtime -->
+                <add.opens>--add-opens java.base/java.io=ALL-UNNAMED --add-opens java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED</add.opens>
+            </properties>
+        </profile>
+        <profile>
+            <id>javadoclint</id>
+            <activation>
+                <jdk>[1.8,)</jdk>
+            </activation>
+            <properties>
+                <javadoc.none>-Xdoclint:none</javadoc.none>
+            </properties>
+        </profile>
         <profile>
             <id>release-sign-artifacts</id>
             <activation>
